# adaptive_video_player

./: .gitignore  LICENSE  MANIFEST.in  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
adaptive_video_player/: apps.py
adaptive_video_player/static/adaptive_video_player/: player.css  player.js
adaptive_video_player/templates/adaptive_video_player/: player.html
adaptive_video_player/templatetags/: adaptive_player.py
demo/: apps.py  urls.py  views.py
demo/templates/demo/: index.html
demo_project/: asgi.py  settings.py  urls.py  wsgi.py
examples/vanilla-demo/: index.html
