[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-adaptive-video-player"
version = "0.1.0"
description = "A modern reusable HLS adaptive video player for Django projects."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Adaptive Video Player Contributors" }
]
keywords = ["django", "hls", "video", "streaming", "adaptive-bitrate"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Multimedia :: Video",
]
dependencies = ["Django>=4.2"]

[project.urls]
Homepage = "https://github.com/saulnyongesa/adaptive_video_player"
Issues = "https://github.com/saulnyongesa/adaptive_video_player/issues"

[tool.setuptools.packages.find]
include = ["adaptive_video_player*"]

[tool.setuptools.package-data]
adaptive_video_player = [
  "static/adaptive_video_player/*",
  "templates/adaptive_video_player/*",
]
